:art::bug::hammer: scrollbar for all elements have consistent style

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,15 +2,15 @@ body {
     background-color: rgb(231, 230, 230);
 }
 
-body::-webkit-scrollbar {
+*::-webkit-scrollbar {
     width: 0.5em;
 }
 
-body::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
-body::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
     background-color: #4db6ac;
     outline: 1px solid #009688;
 }
